# Celerity

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Celerity_Hackathon_Doc.md  Celerity_Stellar_Setup.md  DEMO-SCRIPT.md  PROJECT.md  README.md  deployments.json  design.md  submission-idea-answers.md
contracts/celerity/: Cargo.toml
contracts/celerity/src/: lib.rs  test.rs
contracts/celerity/test_snapshots/test/: claim_before_due_fails.1.json  claim_requires_the_farmers_own_auth.1.json  claim_stops_after_last_installment_and_schedule_advances.1.json  claim_without_settlement_or_registration_fails.1.json  deposit_creates_earmarked_pool.1.json  deposit_rejects_invalid_args.1.json  deposit_without_auth_fails.1.json  dry_pool_flagged_solvent_pools_still_pay.1.json  event_from_unauthorized_key_is_rejected.1.json  funder_cannot_withdraw_anothers_pool.1.json  funder_ledger_starts_empty.1.json  midlist_exhaustion_pays_partial_then_recovers_after_topup.1.json  missing_pool_and_farmer_views_error_cleanly.1.json  non_admin_cannot_register_farmer.1.json  non_admin_cannot_remove_farmer.1.json  one_event_releases_two_funders_to_one_farmer.1.json  pause_pool_sets_status_and_resume_reverts_it.1.json  paused_pool_blocks_claim_and_resume_unblocks.1.json  paused_pool_still_allows_withdraw.1.json  paused_wrong_region_and_high_threshold_pools_are_skipped.1.json  recurring_pool_releases_first_installment_and_records_progress.1.json  register_and_read_back_farmer.1.json  remove_farmer_clears_registry_and_region_list.1.json  remove_then_reregister_in_new_region_keeps_lists_consistent.1.json  replayed_event_is_rejected.1.json  resume_only_works_from_paused.1.json  (+17 more)
oracle/: README.md  (+5 more)
(+107 files in other folders)
