[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "26"

# soroban-env-host 26.1.3 declares `ed25519-dalek = ">=2.0.0"`, which lets the
# resolver pull the newer 3.0.0 whose rand_core 0.10 CryptoRng bound fails to
# compile the host's own testutils (used by `cargo test`). soroban-sdk itself
# requires `ed25519-dalek ^2.1.1`, so 2.x is the intended line. Patch the
# transitive dep to the 2.2.0 tag so the whole graph stays on 2.x.
# (Remove when soroban-env-host tightens its ed25519-dalek upper bound.)
[patch.crates-io]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", tag = "ed25519-2.2.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://developers.stellar.org/docs/build/smart-contracts/example-contracts/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
